# teasr

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  install.sh  llms.txt  package-lock.json  package.json  tease.config.ts  teasr.toml  tsconfig.json  tsup.config.ts
.github/actions/strip-tease/: action.yml
.github/actions/tease/: action.yml
.github/actions/teasr/: action.yml
.github/workflows/: ci.yml  dogfood.yml  publish.yml  release.yml
crates/teasr-cli/: Cargo.toml  README.md
crates/teasr-cli/src/: main.rs
crates/teasr-core/: Cargo.toml  README.md
crates/teasr-core/src/: backend.rs  chrome_frame.rs  config.rs  lib.rs  orchestrator.rs  server.rs  setup.rs  types.rs
crates/teasr-core/src/capture/: mod.rs  screen.rs  terminal.rs  web.rs
crates/teasr-core/src/convert/: gif.rs
crates/teasr-term-render/: Cargo.toml  README.md
crates/teasr-term-render/src/: ansi_parse.rs  lib.rs  rasterize.rs  splash.rs  svg.rs  themes.rs
cross/: Dockerfile.aarch64-unknown-linux-gnu
examples/: screen-demo.sh
examples/demo/: index.html
skills/teasr/: SKILL.md
skills/teasr-dev/: SKILL.md
src/: cli.ts  config.ts  index.ts  logger.ts  screenshot-desktop.d.ts  types.ts
src/capture/: screen.ts
