[package]
name = "teasr-cli"
description = "CLI for teasr screenshot tool"
version = "0.10.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "teasr"
path = "src/main.rs"

[dependencies]
teasr-core = { path = "../teasr-core" }
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
