[package]
name = "teasr-core"
description = "Core orchestration and capture for teasr"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
teasr-term-render = { path = "../teasr-term-render" }
tokio.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
xcap = "0.9"
portable-pty = "0.9"
gifski = { version = "1", default-features = false }
imgref = "1"
rgb = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
futures = "0.3"
async-trait = "0.1"
tempfile = "3"

libc = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
