[package]
name = "teasr-term-render"
description = "ANSI terminal output to PNG renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anstyle-parse = "0.2"
resvg = "0.45"
tiny-skia = "0.11"
anyhow.workspace = true

[dev-dependencies]
insta = "1"
